--- a/index.html
+++ b/index.html
@@ -141,6 +141,12 @@
         overflow: visible;
         align-items: stretch;
     }
+    .panel-grid[data-mode="overview"] {
+        height: max(460px, min(640px, calc(100vh - 140px)));
+    }
+    .panel-grid[data-mode="overview"] .panel {
+        height: 100%;
+    }
     .panel-grid[data-mode="overview"] .panel {
         flex: 1;
         min-height: 0;
@@ -241,10 +247,12 @@
         text-transform: lowercase;
         letter-spacing: 0.06em;
         cursor: pointer;
-        transition: background 0.25s ease;
+        transition: background 0.25s ease, border-color 0.25s ease, box-shadow 0.25s ease;
     }
     .link-slot:hover {
-        background: rgba(224, 244, 255, 0.85);
+        background: rgba(224, 244, 255, 0.95);
+        border-color: rgba(0, 0, 0, 0.35);
+        box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.6);
     }
     .link-slot .link-title {
         font-weight: 600;
@@ -378,10 +386,12 @@
         text-transform: lowercase;
         letter-spacing: 0.06em;
         cursor: pointer;
-        transition: background 0.25s ease, border-color 0.25s ease;
+        transition: background 0.25s ease, border-color 0.25s ease, box-shadow 0.25s ease;
     }
     .blog-button:hover {
-        background: rgba(224, 244, 255, 0.85);
+        background: rgba(224, 244, 255, 0.95);
+        border-color: rgba(0, 0, 0, 0.35);
+        box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.6);
     }
     .blog-button.active {
         background: linear-gradient(180deg, rgba(127, 202, 255, 0.95), rgba(92, 172, 243, 0.95));
