--- a/index.html
+++ b/index.html
@@ -250,9 +250,9 @@
         transition: background 0.25s ease, border-color 0.25s ease, box-shadow 0.25s ease;
     }
     .link-slot:hover {
-        background: rgba(224, 244, 255, 0.95);
-        border-color: rgba(0, 0, 0, 0.35);
-        box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.6);
+        background: linear-gradient(180deg, rgba(240, 251, 255, 0.98), rgba(208, 234, 255, 0.96));
+        border-color: rgba(0, 0, 0, 0.4);
+        box-shadow: 0 14px 30px rgba(111, 184, 255, 0.28), inset 0 0 0 1px rgba(255, 255, 255, 0.7);
     }
     .link-slot .link-title {
         font-weight: 600;
@@ -389,9 +389,9 @@
         transition: background 0.25s ease, border-color 0.25s ease, box-shadow 0.25s ease;
     }
     .blog-button:hover {
-        background: rgba(224, 244, 255, 0.95);
-        border-color: rgba(0, 0, 0, 0.35);
-        box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.6);
+        background: linear-gradient(180deg, rgba(240, 251, 255, 0.98), rgba(208, 234, 255, 0.96));
+        border-color: rgba(0, 0, 0, 0.4);
+        box-shadow: 0 14px 30px rgba(111, 184, 255, 0.28), inset 0 0 0 1px rgba(255, 255, 255, 0.7);
     }
     .blog-button.active {
         background: linear-gradient(180deg, rgba(127, 202, 255, 0.95), rgba(92, 172, 243, 0.95));
@@ -585,6 +585,38 @@
               <a class="link-slot" href="https://www.tiktok.com/@ayaanrauf_real" target="_blank" rel="noopener noreferrer">
                 <span class="link-title">tiktok</span>
                 <span class="link-url">tiktok.com/@ayaanrauf_real</span>
+              </a>
+              <a class="link-slot" href="#!" rel="nofollow noopener">
+                <span class="link-title">newsletter</span>
+                <span class="link-url">placeholder-link.test/newsletter</span>
+              </a>
+              <a class="link-slot" href="#!" rel="nofollow noopener">
+                <span class="link-title">portfolio</span>
+                <span class="link-url">placeholder-link.test/portfolio</span>
+              </a>
+              <a class="link-slot" href="#!" rel="nofollow noopener">
+                <span class="link-title">soundcloud</span>
+                <span class="link-url">placeholder-link.test/soundcloud</span>
+              </a>
+              <a class="link-slot" href="#!" rel="nofollow noopener">
+                <span class="link-title">discography</span>
+                <span class="link-url">placeholder-link.test/discography</span>
+              </a>
+              <a class="link-slot" href="#!" rel="nofollow noopener">
+                <span class="link-title">press kit</span>
+                <span class="link-url">placeholder-link.test/press</span>
+              </a>
+              <a class="link-slot" href="#!" rel="nofollow noopener">
+                <span class="link-title">events</span>
+                <span class="link-url">placeholder-link.test/events</span>
+              </a>
+              <a class="link-slot" href="#!" rel="nofollow noopener">
+                <span class="link-title">shop</span>
+                <span class="link-url">placeholder-link.test/shop</span>
+              </a>
+              <a class="link-slot" href="#!" rel="nofollow noopener">
+                <span class="link-title">contact</span>
+                <span class="link-url">placeholder-link.test/contact</span>
               </a>
             </div>
           </div>
