--- a/index.html
+++ b/index.html
@@ -247,12 +247,12 @@
         text-transform: lowercase;
         letter-spacing: 0.06em;
         cursor: pointer;
-        transition: background 0.25s ease, border-color 0.25s ease, box-shadow 0.25s ease;
+        transition: background 0.25s ease, border-color 0.25s ease;
     }
     .link-slot:hover {
         background: linear-gradient(180deg, rgba(240, 251, 255, 0.98), rgba(208, 234, 255, 0.96));
         border-color: rgba(0, 0, 0, 0.4);
-        box-shadow: 0 14px 30px rgba(111, 184, 255, 0.28), inset 0 0 0 1px rgba(255, 255, 255, 0.7);
+        border-radius: 14px;
     }
     .link-slot .link-title {
         font-weight: 600;
@@ -386,12 +386,12 @@
         text-transform: lowercase;
         letter-spacing: 0.06em;
         cursor: pointer;
-        transition: background 0.25s ease, border-color 0.25s ease, box-shadow 0.25s ease;
+        transition: background 0.25s ease, border-color 0.25s ease;
     }
     .blog-button:hover {
         background: linear-gradient(180deg, rgba(240, 251, 255, 0.98), rgba(208, 234, 255, 0.96));
         border-color: rgba(0, 0, 0, 0.4);
-        box-shadow: 0 14px 30px rgba(111, 184, 255, 0.28), inset 0 0 0 1px rgba(255, 255, 255, 0.7);
+        border-radius: 14px;
     }
     .blog-button.active {
         background: linear-gradient(180deg, rgba(127, 202, 255, 0.95), rgba(92, 172, 243, 0.95));
